# tree-sitter-goweb

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  example.html  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-goweb.pc.in
bindings/c/tree_sitter/: tree-sitter-goweb.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_goweb/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGowebTests/: TreeSitterGowebTests.swift
orig/: binding.gyp  binding.gyp.orig  grammar.js  package-lock.json  package.json
orig/queries/goweb/: highlights.scm
orig/queries/html/: injections.scm
queries/html/: injections.scm
src/: grammar.json  node-types.json  parser.c
