[package]
name = "tree-sitter-goweb"
description = "tree-sitter for goweb programming language"
version = "0.1.0"
authors = ["Pierre Laplante <laplante@plcb.ca>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "goweb"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/laplantepierre/tree-sitter-goweb.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.5"
